<resources>
    <string name="app_name">AudioPlayer</string>
    <string name="play_your_favourite_music">Play Your Favourite Music</string>
    <string name="todo">TODO</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="volume">Volume</string>
    <string name="button">Button</string>
</resources>